# plugin-auto-gen-youtube-videos

./: .gitignore  README.md  package-lock.json
auto-marketing-images/: .gitignore  README.md  pyproject.toml  start.txt
auto-marketing-images/config/: env.example  pipeline.yaml  sources.yaml  video_profiles.yaml  youtube_accounts.yaml
auto-marketing-images/config/channels_config_structure/: rpjtechgroup.yaml.example
auto-marketing-images/docs/: content-package-schema.md
auto-marketing-images/src/: console_runner.py  content_bridge.py  content_queue.py  models.py  pipeline.py  upload_queue.py
auto-marketing-images/src/content/: gemini_rewriter.py  script_contract.py
auto-marketing-images/src/media/: image_generator.py
auto-marketing-images/src/scrapers/: news_sources.py
auto-marketing-images/src/utils/: api_keys_pool.py  config.py  gemini_keys.py  logging_utils.py  oauth_helpers.py  pillow_compat.py  state_store.py
auto-marketing-images/src/video/: hyper_edit_effects.py  short_builder.py  slide_renderer.py
auto-marketing-images/src/video/tts/: __init__.py  audio_io.py  base.py  chain.py  edge.py  hf_space.py
auto-marketing-images/src/youtube/: check_oauth_tokens.py  check_upload_config.py  oauth_status.py  upload_settings.py  uploader.py
plugin-auto-gen/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
plugin-auto-gen/content/: chatgpt.js  instagram.js  labs-flow-page.js  labs-flow.js  youtube.js
plugin-auto-gen/docs/: flow-dom-notes.md
plugin-auto-gen/scripts/: test-flow-capture.mjs  test-flow-submit-selector.mjs
(+8 files in other folders)
